Issue #13011 - fixed border bottom visibility issue (#13013)

--- a/profile/themes/os_base/scss/component/_teaser.scss
+++ b/profile/themes/os_base/scss/component/_teaser.scss
@@ -1,7 +1,7 @@
 .node--teaser, .teaser {
   margin: 0 0 20px;
   padding: 20px 0 40px;
-  border-bottom: 1px solid $color-light-gray;
+  border-bottom: 1px solid $color-light-gray6;
   &.events {
     margin: 0;
     padding: 0;
