--- a/profile/themes/monochrome/scss/style.scss
+++ b/profile/themes/monochrome/scss/style.scss
@@ -12,3 +12,5 @@
 @import './components/search';
 @import './components/sidebar';
 @import './components/pager';
+
+@import '../../os_base/scss/base/poweredby_common';
