--- a/profile/themes/slate/scss/components/_footer.scss
+++ b/profile/themes/slate/scss/components/_footer.scss
@@ -1,14 +1,7 @@
-footer {
+footer.footer {
   background: $color_fuscous_gray_approx;
   color: $white;
   text-shadow: none;
-  .footer-login {
-    color: $white;
-    text-shadow: none;
-    &:after {
-      background-image: none;
-    }
-  }
   a {
     color: $white;
     text-shadow: none;
