Replace chosen to select2 (#12958)
* Issue #12944 - Replace chosen to select2 in taxonomy terms content selection

* Issue #12944 - Fix kernel test

* Issue #12944 - Fix selecting options

* Issue #12944 - Refactor select2 option selection

* Issue #12944 - Refactor select2 option remove

* Issue #12944 - Fix apply tests

* Issue #12944 - Fix remove tests

* Issue #12944 - Replace chosen in Filter by vocab widget

* Issue #12944 - Uninstall chosen module

* Issue #12944 - fixed color contrast in select 2

Co-authored-by: mukeyshkumar <47223502+mukeyshkumar@users.noreply.github.com>

--- a/profile/themes/os_admin/scss/components/_forms.scss
+++ b/profile/themes/os_admin/scss/components/_forms.scss
@@ -70,3 +70,9 @@ form {
     }
   }
 }
+/**** select 2 highlighted ****/
+.select2-container--default {
+  .select2-results__option--highlighted[aria-selected] {
+    background: $color-blue;
+  }
+}
