--- a/profile/modules/os/modules/os_media/templates/browser.html
+++ b/profile/modules/os/modules/os_media/templates/browser.html
@@ -1,8 +1,8 @@
 <div class="container-fluid" ng-switch="pane">
     <div class="media-browser-buttons" ng-show="pane != 'edit' && pane != 'delete'" role="tablist" aria-label="Media Tabs">
-        <div role="tab" tabindex="0" aria-selected="{{pane == 'upload'? true: false}}" class="media-browser-button" ng-class="{active:pane=='upload'}" ng-show="activePanes.upload" ng-click="changePanes('upload')" ng-keydown="$event.keyCode === 13 && changePanes('upload')">Upload from your computer</div>
-        <div role="tab" tabindex="0" aria-selected="{{pane == 'web'? true: false}}" class="media-browser-button" ng-class="{active:pane=='web'}" ng-show="activePanes.web" ng-click="changePanes('web')" ng-keydown="$event.keyCode === 13 && changePanes('web')">Embed from the web</div>
-        <div role="tab" tabindex="0" aria-selected="{{pane == 'library'? true: false}}" class="media-browser-button" ng-class="{active:pane=='library'}" ng-show="activePanes.library" ng-click="changePanes('library')" ng-keydown="$event.keyCode === 13 && changePanes('library')">Previously uploaded files</div>
+        <div role="tab" tabindex="0" aria-selected="{{pane == 'upload'? true: false}}" class="media-browser-button media-browser-button--upload" ng-class="{active:pane=='upload'}" ng-show="activePanes.upload" ng-click="changePanes('upload')" ng-keydown="$event.keyCode === 13 && changePanes('upload')">Upload from your computer</div>
+        <div role="tab" tabindex="0" aria-selected="{{pane == 'web'? true: false}}" class="media-browser-button media-browser-button--web" ng-class="{active:pane=='web'}" ng-show="activePanes.web" ng-click="changePanes('web')" ng-keydown="$event.keyCode === 13 && changePanes('web')">Embed from the web</div>
+        <div role="tab" tabindex="0" aria-selected="{{pane == 'library'? true: false}}" class="media-browser-button media-browser-button--library" ng-class="{active:pane=='library'}" ng-show="activePanes.library" ng-click="changePanes('library')" ng-keydown="$event.keyCode === 13 && changePanes('library')">Previously uploaded files</div>
     </div>
     <div class="media-browser-panes">
         <div class="media-browser-pane" role="tabpanel" ng-switch-when="upload" ng-click="$parent.extensionFailure = false">
