--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -41,6 +41,7 @@
 @import "component/list-of-posts";
 @import "component/accordion";
 @import "component/list-of-files";
+@import "component/book-nav";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
