12444 edit vsite role page (#13150)
* Issue #12444 - Alter form to hide the text.

* Issue #12444 - Removed unwanted code.

* Issue #12444 - Fixed test issue.

* Issue #12444 - Remove unwanted spaces.

* Issue #12444 - Fixed test for test Edit.

Co-authored-by: Jitesh <jitesh.khatwani@axelerant.com>

--- a/profile/themes/os_admin/scss/global/_global.scss
+++ b/profile/themes/os_admin/scss/global/_global.scss
@@ -27,3 +27,8 @@ td.manage-media {
     }
   }
 }
+.group-role-add-form, .group-role-edit-form {
+  .machine-name-label, .machine-name-value, .admin-link {
+    display: none;
+  }
+}
