--- a/profile/themes/os_base/templates/paragraphs/paragraph--slideshow.html.twig
+++ b/profile/themes/os_base/templates/paragraphs/paragraph--slideshow.html.twig
@@ -51,10 +51,10 @@
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
       <div class="widget--slideshow-main clearfix">
-        {{ content.field_slide_file_image }}
+        {{ content.field_slide_image }}
         {% if content.field_slide_headline|render|striptags|trim or content.field_slide_description|render|striptags|trim %}
           <div class="slide-caption">
-            {{content|without('field_slide_file_image')}}
+            {{content|without('field_slide_image')}}
           </div>
         {% endif %}
       </div>
