Issue #12865 - Unplaced widgets - Contextual Links (#13136)
* Issue #12865 - Unplaced widgets - Contextual Links

* Issue #12865 - Tests

* Issue #12865 - Tests Update

* Issue #12865 - Revert Console directory

* Issue #12865 - Change test

Co-authored-by: Ashish Prabhakar <ashish.prabhakar@axelerant.com>

--- a/profile/modules/apps/os_widgets/css/layout.form.css
+++ b/profile/modules/apps/os_widgets/css/layout.form.css
@@ -152,3 +152,15 @@ nav.ui-sortable-helper ul.menu {
 .contextual .trigger {
   display: none;
 }
+
+/**
+ * Show contextual links for unplaced blocks.
+ * Added .region-footer-bottom to avoid dragged blocks' display.
+ */
+.region-footer-bottom .display-contextual .contextual .trigger {
+  display: block;
+}
+
+.region-footer-bottom .display-contextual .contextual li.block-configure {
+  display: none;
+}
