Create a term form element when edit media (#13097)
* Issue #13005 - Enable rest ui and add Vocabulary resource

* Issue #13005 - Create custom rest resource

* Issue #13005 - Create new taxonomy rest resource

* Issue #13005 - Start refactoring uiselect into select2

* Issue #13005 - Implement terms selection with simple jquery (WIP)

* Issue #13005 - Naming fix

* Issue #13005 - Remove unused modules

* Issue #13005 - Remove restui

* Issue #13005 - Implement form type

* Issue #13005 - Line fix

* Issue #13005 - Move js code into ng-switch case

* Issue #13005 - Fix entity type

* Issue #13005 - Fix terms collect

* Issue #13005 - Finally loaded the media terms

* Issue #13005 - Save terms properly

* Issue #13005 - Fix angular version and set the highest compatible versions

* Issue #13005 - Convert library files into npm package files

* Issue #13005 - Fixing taxonomy term tree widget

* Issue #13005 - Naming fix

* Issue #13005 - Create basic test for vocabulary resource

* Issue #13005 - Create basic tests for vocabulary edit on files edit popup

* Issue #13005 - Refactor with loaded entity

* Issue #13005 - Little CSS fixes and add classes

* Issue #13005 - Fix group

* Issue #13005 - Fix test with ABC order

* Issue #13005 - Fix cache dependency name when not is vsite

* Issue #13005 - Naming fix

* Issue #13005 - Create test for taxonomy resource

* Issue #13005 - Fix A11y label for

* Issue #13005 - Fix A11y issues

* Issue #13005 - Fix label issue, and css fix

Co-authored-by: Balázs Sztreha <balazs.sztreha@cheppers.com>

--- a/profile/modules/os/js/TreeSelector/TreeSelector.css
+++ b/profile/modules/os/js/TreeSelector/TreeSelector.css
@@ -1,6 +1,7 @@
 [tree-selector-widget] ul {
   margin-left: 0.25em;
-  margin-bottom: 0px;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 [tree-selector-widget] li {
@@ -10,8 +11,8 @@
 [tree-selector-widget] .expander {
   display: inline-block;
   width: 13px;
-  background-image: url('../../../../themes/cp_theme/images/cp-sprite.png');
-  background-position-x: 0px;
+  background-image: url('/profiles/contrib/openscholar/modules/os/css/cp-sprite.png');
+  background-position-x: 0;
   background-position-y: -452px;
 }
 
