Issue #11640 - My Sites link under user menu (#13265)
* Issue #11640 - My Sites link under user menu

* Issue #11640 - ui for my sites page

* Issue #11640 - A11y Fixes

Co-authored-by: mukeyshkumar <mukeysh.kumar@axelerant.com>
Co-authored-by: Ashish Prabhakar <ashish.prabhakar@axelerant.com>

--- a/profile/libraries/os-toolbar/os-toolbar.scss
+++ b/profile/libraries/os-toolbar/os-toolbar.scss
@@ -140,6 +140,9 @@ $mobile: "screen and (max-width: #{$screen-sm})";
         .support-site a:before {
           background-position: -10px -200px;
         }
+        .my-sites a:before {
+          background-position: -10px -242px;
+        }
       }
     }
   //accessibility fixes
