--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -42,6 +42,7 @@
 @import "component/accordion";
 @import "component/list-of-files";
 @import "component/book-nav";
+@import "component/usersite";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
