Issue #13272 - fixed calendar export icon position (#13290)

--- a/profile/themes/os_base/scss/component/_calendar.scss
+++ b/profile/themes/os_base/scss/component/_calendar.scss
@@ -249,3 +249,13 @@ aside {
     border: 0;
   }
 }
+.view-upcoming-calendar,
+.full-calendar-view {
+  .attachment {
+    @media#{$tablet} {
+    position: absolute;
+    top: -50px;
+    right: 0;
+    }
+  }
+}
